syntax = "proto3";

import "google/protobuf/empty.proto";

package dataKey;

option java_multiple_files = true;
option java_package = "jp.inaba.datakey.grpc";

service DeleteDataKey {
  rpc handle (DeleteDataKeyRequest) returns (google.protobuf.Empty);
}

message DeleteDataKeyRequest {
  string relationId = 1;
}